[FEAT] Add testing for getDetail

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node src/index.js",
     "test": "mocha test/**.*.js --exit",
     "lint": "npx eslint src",
-    "lint:fix": "npx eslint src --fix"
+    "lint:fix": "npx eslint src --fix",
+    "prepare": "husky install"
   },
   "type": "module",
   "dependencies": {
@@ -22,6 +23,7 @@
     "eslint": "^8.54.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.0",
+    "husky": "^8.0.3",
     "mocha": "^10.2.0",
     "supertest": "^6.3.3"
   }
